Split header, skeleton apis

--- a/main/BUILD
+++ b/main/BUILD
@@ -1,6 +1,15 @@
 load("@rules_cc//cc:defs.bzl", "cc_binary")
 
+cc_library(
+    name = "libdiff",
+    srcs = ["diff.cc"],
+    hdrs = ["diff.h"],
+)
+
 cc_binary(
     name = "diff",
-    srcs = ["diff.cc"],
+    srcs = ["main.cc"],
+    deps = [
+      ":libdiff",
+    ],
 )
