[test] Set up skeleton of gtest

--- a/main/BUILD
+++ b/main/BUILD
@@ -1,15 +1,8 @@
-cc_library(
-    name = "libdiff",
-    srcs = ["diff.cc"],
-    hdrs = ["diff.h"],
-    copts = [ "-std=c++17" ],
-)
-
 cc_binary(
     name = "diff",
     srcs = ["main.cc"],
     deps = [
-      ":libdiff",
+        "//lib:libdiff",
     ],
     copts = [ "-std=c++17" ],
 )
